Fix: Set column width to prevent overflow in small screen sizes

--- a/css/msls.less
+++ b/css/msls.less
@@ -103,6 +103,11 @@ select.msls-translations {
     margin: 0 1px !important;
 }  
 
+
+.column-mslscol {
+    width: 56px;
+}
+
 #wpadminbar .language-badge,
 #wpadminbar * .language-badge {
     position: relative;
